add login with goole

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,26 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>BoardGameShopClient</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script async custom-element="amp-onetap-google"
+    src="https://cdn.ampproject.org/v0/amp-onetap-google-0.1.js"></script>
 </head>
+
 <body>
   <app-root></app-root>
+  <script>
+    function googleLoginCallback(data) {
+      if(data.credential) {
+        localStorage.setItem('id-token', data.credential);
+        location.reload();
+      }
+    }
+  </script>
 </body>
+
 </html>
